--- a/html/breakfastNoVeg.html
+++ b/html/breakfastNoVeg.html
@@ -48,40 +48,40 @@
         Our non Vegan Options   
         </p>
         <div class="foodDisplayIconContainer">
-          <button id="beeren_icecream_minze" class="foodIcon beeren_icecream_minze" data-target="beeren_icecream_minze_menu">
+          <button id="beeren_icecream_minzeNV" class="foodIcon beeren_icecream_minze" data-target="beeren_icecream_minze_menuNV">
             <div class="text-overlay">
-              <p>Icecream Minze</p><br>
+              <p>Skyr Dessert</p><br>
+              <p>Prep time: 25 min</p>
+            </div>
+          </button>
+          <button id="chocolate_shell_oats_buttonNV" class="foodIcon chocolate_shell_oats" data-target="chocolate_shell_oats_menuNV">
+            <div class="text-overlay">
+              <p>Blueberry Bowl</p><br>
+              <p>Prep time: 30 min</p>
+            </div>
+          </button>
+          <button id="haferschleimNV" class="foodIcon haferschleim" data-target="haferschleim_menuNV">
+            <div class="text-overlay">
+              <p>Sweetpotato Avocado Toast</p><br>
               <p>Prep time: 15 min</p>
             </div>
           </button>
-          <button id="chocolate_shell_oats_button" class="foodIcon chocolate_shell_oats" data-target="chocolate_shell_oats_menu">
+          <button id="hummus_ohne_tahiniNV" class="foodIcon hummus_ohne_tahini" data-target="hummus_ohne_tahini_menuNV">
             <div class="text-overlay">
-              <p>Chocolate Shell Oats</p><br>
-              <p>Prep time: 10 min</p>
-            </div>
-          </button>
-          <button id="haferschleim" class="foodIcon haferschleim" data-target="haferschleim_menu">
-            <div class="text-overlay">
-              <p>haferschleim</p><br>
-              <p>Prep time: 5 min</p>
-            </div>
-          </button>
-          <button id="hummus_ohne_tahini" class="foodIcon hummus_ohne_tahini" data-target="hummus_ohne_tahini_menu">
-            <div class="text-overlay">
-              <p>Hummus Ohne Tahini</p><br>
+              <p>Sweetpotato Freshcheese Toast</p><br>
               <p>Prep time: 20 min</p>
             </div>
           </button>
-          <button id="knuspriges_buchweizen_granola" class="foodIcon knuspriges_buchweizen_granola" data-target="knuspriges_buchweizen_granola_menu">
+          <button id="knuspriges_buchweizen_granolaNV" class="foodIcon knuspriges_buchweizen_granola" data-target="knuspriges_buchweizen_granola_menuNV">
             <div class="text-overlay">
-              <p>Knuspriges Buchweizen Granola</p><br>
+              <p>Avocado Freshcheese Toast</p><br>
               <p>Prep time: 7 min</p>
             </div>
           </button>
-          <button id="overnight_oats_mit_skyr" class="foodIcon overnight_oats_mit_skyr" data-target="overnight_oats_mit_skyr_menu">
+          <button id="overnight_oats_mit_skyrNV" class="foodIcon overnight_oats_mit_skyr" data-target="overnight_oats_mit_skyr_menuNV">
             <div class="text-overlay">
-              <p>Oats Mit Skyr</p><br>
-              <p>Prep time: 12 hrs</p>
+              <p>Granola</p><br>
+              <p>Prep time: 2 hrs</p>
             </div>
           </button>
         </div>
@@ -89,12 +89,12 @@
   
     
   
-    <section class="recipeDisplay" id="beeren_icecream_minze_menu">
+    <section class="recipeDisplay" id="beeren_icecream_minze_menuNV">
       <div class="recipeHeader">
-        <img src="../images/breakfast/beeren_icecream_minze.jpg" alt="Chocolate Shell Oats">
+        <img src="../images/breakfast/skyr_dessert.jpg" alt="Chocolate Shell Oats">
         <div class="recipeText">
        <div class="recipeInfo">
-          <h3>Beeren Icecream Minze</h3>
+          <h3>Skyr Dessert</h3>
         <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
       </div>
         <p>
@@ -132,12 +132,12 @@
       </div>
     </section>
   
-      <section class="recipeDisplay" id="chocolate_shell_oats_menu">
+      <section class="recipeDisplay" id="chocolate_shell_oats_menuNV">
         <div class="recipeHeader">
-          <img src="../images/breakfast/chocolate_shell_oats.jpg" alt="Chocolate Shell Oats">
+          <img src="../images/breakfast/smoothie_bowl_mit_blaubeeren.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
-            <h3>Chocolate Shell Oats</h3>
+            <h3>Blueberry Bowl</h3>
           <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
         </div>
           <p>
@@ -175,12 +175,12 @@
         </div>
       </section>
   
-      <section class="recipeDisplay" id="haferschleim_menu">
+      <section class="recipeDisplay" id="haferschleim_menuNV">
         <div class="recipeHeader">
-          <img src="../images/breakfast/haferschleim.jpg" alt="Chocolate Shell Oats">
+          <img src="../images/breakfast/suesskartoffel_toast_avocado_erbsen_pueree.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
-            <h3>Haferschleim</h3>
+            <h3>Sweetpotato Avocado Toast</h3>
           <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
         </div>
           <p>
@@ -218,12 +218,12 @@
         </div>
       </section>
   
-      <section class="recipeDisplay" id="hummus_ohne_tahini_menu">
+      <section class="recipeDisplay" id="hummus_ohne_tahini_menuNV">
         <div class="recipeHeader">
-          <img src="../images/breakfast/haferschleim.jpg" alt="Chocolate Shell Oats">
+          <img src="../images/breakfast/suesskartoffel_toasts_frischkaese_avocado.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
-            <h3>Hummus Ohne Tahini</h3>
+            <h3>Sweetpotato Freshcheese Toast</h3>
           <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
         </div>
           <p>
@@ -261,12 +261,12 @@
         </div>
       </section>
   
-      <section class="recipeDisplay" id="knuspriges_buchweizen_granola_menu">
+      <section class="recipeDisplay" id="knuspriges_buchweizen_granola_menuNV">
         <div class="recipeHeader">
-          <img src="../images/breakfast/haferschleim.jpg" alt="Chocolate Shell Oats">
+          <img src="../images/breakfast/vollkornbrot_avocadofrischkaese_raeucherlachs.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
-            <h3>Knuspriges Buchweizen Granola</h3>
+            <h3>Avocado Freshcheese Toast</h3>
           <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
         </div>
           <p>
@@ -304,12 +304,12 @@
         </div>
       </section>
   
-      <section class="recipeDisplay" id="overnight_oats_mit_skyr_menu">
+      <section class="recipeDisplay" id="overnight_oats_mit_skyr_menuNV">
         <div class="recipeHeader">
-          <img src="../images/breakfast/haferschleim.jpg" alt="Chocolate Shell Oats">
+          <img src="../images/breakfast/zuckerfreies_granola.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
-            <h3>Oats Mit Skyr</h3>
+            <h3>Granola</h3>
           <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
         </div>
           <p>
