--- a/html/breakfastVeg.html
+++ b/html/breakfastVeg.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vegan Breakfast</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image" href="/images/MoKitchenLogo_bg_d2232a.png" />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
@@ -87,7 +91,7 @@
         </div>
       </section>
   
-      <section class="recipeDisplay" id="beeren_icecream_minze_menu">
+      <section class="recipeDisplay Veg" id="beeren_icecream_minze_menu">
         <div class="recipeHeader">
           <img src="../images/breakfast/beeren_icecream_minze.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
@@ -130,7 +134,7 @@
         </div>
       </section>
   
-      <section class="recipeDisplay" id="chocolate_shell_oats_menu">
+      <section class="recipeDisplay Veg" id="chocolate_shell_oats_menu">
         <div class="recipeHeader">
           <img src="../images/breakfast/chocolate_shell_oats.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
@@ -173,7 +177,7 @@
         </div>
       </section>
   
-      <section class="recipeDisplay" id="haferschleim_menu">
+      <section class="recipeDisplay Veg" id="haferschleim_menu">
         <div class="recipeHeader">
           <img src="../images/breakfast/haferschleim.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
@@ -216,9 +220,9 @@
         </div>
       </section>
   
-      <section class="recipeDisplay" id="hummus_ohne_tahini_menu">
+      <section class="recipeDisplay Veg" id="hummus_ohne_tahini_menu">
         <div class="recipeHeader">
-          <img src="../images/breakfast/haferschleim.jpg" alt="Chocolate Shell Oats">
+          <img src="../images/breakfast/hummus_ohne_tahini.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
             <h3>Hummus Ohne Tahini</h3>
@@ -259,9 +263,9 @@
         </div>
       </section>
   
-      <section class="recipeDisplay" id="knuspriges_buchweizen_granola_menu">
+      <section class="recipeDisplay Veg" id="knuspriges_buchweizen_granola_menu">
         <div class="recipeHeader">
-          <img src="../images/breakfast/haferschleim.jpg" alt="Chocolate Shell Oats">
+          <img src="../images/breakfast/knuspriges_buchweizen_granola.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
             <h3>Knuspriges Buchweizen Granola</h3>
@@ -302,9 +306,9 @@
         </div>
       </section>
   
-      <section class="recipeDisplay" id="overnight_oats_mit_skyr_menu">
+      <section class="recipeDisplay Veg" id="overnight_oats_mit_skyr_menu">
         <div class="recipeHeader">
-          <img src="../images/breakfast/haferschleim.jpg" alt="Chocolate Shell Oats">
+          <img src="../images/breakfast/overnight_oats_mit_skyr.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
             <h3>Oats Mit Skyr</h3>
