--- a/html/lunchNoVeg.html
+++ b/html/lunchNoVeg.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lunch</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image" href="/images/MoKitchenLogo_bg_d2232a.png" />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
@@ -51,44 +55,44 @@
         <div class="foodDisplayIconContainer">
           <button id="button1" class="foodIcon">
             <div class="text-overlay">
-              <p>Mint Icecream</p>
+              <p>Pancakes</p>
               <br />
               <p>Prep time: 15 min</p>
             </div>
           </button>
           <button id="button2" class="foodIcon">
             <div class="text-overlay">
-              <p>Chocolate Shell Oats</p>
+              <p>Pizza Toast</p>
               <br />
-              <p>Prep time: 10 min</p>
+              <p>Prep time: 30 min</p>
             </div>
           </button>
           <button id="button3" class="foodIcon">
             <div class="text-overlay">
-              <p>Porridge</p>
+              <p>Fried Noodle Pan</p>
               <br />
-              <p>Prep time: 5 min</p>
+              <p>Prep time: 15 min</p>
             </div>
           </button>
           <button id="button4" class="foodIcon">
             <div class="text-overlay">
-              <p>Hummus without Tahini</p>
+              <p>Spiral Potatos</p>
               <br />
               <p>Prep time: 20 min</p>
             </div>
           </button>
           <button id="button5" class="foodIcon">
             <div class="text-overlay">
-              <p>Crunchy buckwheat granola</p>
+              <p>tortellini</p>
               <br />
-              <p>Prep time: 7 min</p>
+              <p>Prep time: 35 min</p>
             </div>
           </button>
           <button id="button6" class="foodIcon">
             <div class="text-overlay">
-              <p>Oats with Skyr</p>
+              <p>Groundbeef Stirfry</p>
               <br />
-              <p>Prep time: 12 hrs</p>
+              <p>Prep time: 1 hr</p>
             </div>
           </button>
         </div>
@@ -256,8 +260,8 @@
       <section id="recipeContainer4" class="recipeDisplay">
         <div class="recipeHeader">
           <img
-            src="../images/breakfast/hummus_ohne_tahini.jpg"
-            alt="Hummus without Tahini"
+            src="../images/lunch/spiralkartoffeln.jpg"
+            alt="Spiral Potatos"
           />
           <div class="recipeText">
             <div class="recipeInfo">
