--- a/html/lunchVeg.html
+++ b/html/lunchVeg.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vegan Lunch</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image" href="/images/MoKitchenLogo_bg_d2232a.png" />
     <link rel="stylesheet" href="../css/style.css" />
   </head>
@@ -49,42 +53,42 @@
         <h2>Lunch</h2>
         <p id="foodDisplayP">Here you find our vegan options</p>
         <div class="foodDisplayIconContainer">
-          <button id="button1" class="foodIcon">
+          <button id="button1Veg" class="foodIconVeg">
             <div class="text-overlay">
               <p>Mint Icecream</p>
               <br />
               <p>Prep time: 15 min</p>
             </div>
           </button>
-          <button id="button2" class="foodIcon">
+          <button id="button2Veg" class="foodIconVeg">
             <div class="text-overlay">
               <p>Chocolate Shell Oats</p>
               <br />
               <p>Prep time: 10 min</p>
             </div>
           </button>
-          <button id="button3" class="foodIcon">
+          <button id="button3Veg" class="foodIconVeg">
             <div class="text-overlay">
               <p>Porridge</p>
               <br />
               <p>Prep time: 5 min</p>
             </div>
           </button>
-          <button id="button4" class="foodIcon">
+          <button id="button4Veg" class="foodIconVeg">
             <div class="text-overlay">
               <p>Hummus without Tahini</p>
               <br />
               <p>Prep time: 20 min</p>
             </div>
           </button>
-          <button id="button5" class="foodIcon">
+          <button id="button5Veg" class="foodIconVeg">
             <div class="text-overlay">
               <p>Crunchy buckwheat granola</p>
               <br />
               <p>Prep time: 7 min</p>
             </div>
           </button>
-          <button id="button6" class="foodIcon">
+          <button id="button6Veg" class="foodIconVeg">
             <div class="text-overlay">
               <p>Oats with Skyr</p>
               <br />
@@ -94,7 +98,7 @@
         </div>
       </section>
 
-      <section id="recipeContainer1" class="recipeDisplay">
+      <section id="recipeContainer1" class="recipeDisplay Veg">
         <div class="recipeHeader">
           <img
             src="../images/breakfast/zuckerfreies_granola.jpg"
@@ -148,7 +152,7 @@
           </ol>
         </div>
       </section>
-      <section id="recipeContainer2" class="recipeDisplay">
+      <section id="recipeContainer2" class="recipeDisplay Veg">
         <div class="recipeHeader">
           <img
             src="../images/breakfast/overnight_oats_mit_skyr.jpg"
@@ -202,7 +206,7 @@
           </ol>
         </div>
       </section>
-      <section id="recipeContainer3" class="recipeDisplay">
+      <section id="recipeContainer3" class="recipeDisplay Veg">
         <div class="recipeHeader">
           <img
             src="../images/breakfast/smoothie_bowl_mit_blaubeeren.jpg"
@@ -256,7 +260,7 @@
           </ol>
         </div>
       </section>
-      <section id="recipeContainer4" class="recipeDisplay">
+      <section id="recipeContainer4" class="recipeDisplay Veg">
         <div class="recipeHeader">
           <img
             src="../images/breakfast/suesskartoffel_toast_avocado_erbsen_pueree.jpg"
@@ -310,7 +314,7 @@
           </ol>
         </div>
       </section>
-      <section id="recipeContainer5" class="recipeDisplay">
+      <section id="recipeContainer5" class="recipeDisplay Veg">
         <div class="recipeHeader">
           <img
             src="../images/breakfast/suesskartoffel_toasts_frischkaese_avocado.jpg"
@@ -364,7 +368,7 @@
           </ol>
         </div>
       </section>
-      <section id="recipeContainer6" class="recipeDisplay">
+      <section id="recipeContainer6" class="recipeDisplay Veg">
         <div class="recipeHeader">
           <img
             src="../images/breakfast/vollkornbrot_avocadofrischkaese_raeucherlachs.jpg"
