--- a/html/dinnerVeg.html
+++ b/html/dinnerVeg.html
@@ -127,7 +127,7 @@
         </div>
       </section>
 
-      <section class="recipeDisplay" id="bowlRecipe">
+      <section class="recipeDisplay Veg" id="bowlRecipe">
         <div class="recipeHeader">
           <img
             src="../images/dinner/asia_bowl_kraeutersalat.jpg"
@@ -178,7 +178,7 @@
         </div>
       </section>
 
-      <section class="recipeDisplay" id="brocRecipe">
+      <section class="recipeDisplay Veg" id="brocRecipe">
         <div class="recipeHeader">
           <img
             src="../images/dinner/brokkoli_lauch_curry.jpg"
@@ -236,7 +236,7 @@
         </div>
       </section>
 
-      <section class="recipeDisplay" id="endiveRecipe">
+      <section class="recipeDisplay Veg" id="endiveRecipe">
         <div class="recipeHeader">
           <img
             src="../images/dinner/endiviensalat_tofu_dressing.jpg"
@@ -287,7 +287,7 @@
         </div>
       </section>
 
-      <section class="recipeDisplay" id="carrotRecipe">
+      <section class="recipeDisplay Veg" id="carrotRecipe">
         <div class="recipeHeader">
           <img
             src="../images/dinner/moehren_linsen_suppe.jpg"
@@ -350,7 +350,7 @@
         </div>
       </section>
 
-      <section class="recipeDisplay" id="spinachRecipe">
+      <section class="recipeDisplay Veg" id="spinachRecipe">
         <div class="recipeHeader">
           <img
             src="../images/dinner/spinat_omelette_feta.jpg"
@@ -397,7 +397,7 @@
         </div>
       </section>
 
-      <section class="recipeDisplay" id="stirFryRecipe">
+      <section class="recipeDisplay Veg" id="stirFryRecipe">
         <div class="recipeHeader">
           <img
             src="../images/dinner/romanesco_pfanne_fregola.jpg"
