--- a/html/index.html
+++ b/html/index.html
@@ -67,56 +67,33 @@
           Dive into our daily picks and make every meal a delicious adventure!
         </p>
         <div id="foodDisplayIconContainer">
-          <button id="pancakes" class="foodIcon"></button>
-          <button id="schnitzel" class="foodIcon"></button>
-          <button id="goatCheeseSalad" class="foodIcon"></button>
+          <button id="chocolate_shell_oats_buttonNV" class="foodIcon chocolate_shell_oats" onclick="window.location.href='BreakfastNoVeg.html';">
+            <div class="text-overlay">
+              <p>Blueberry Bowl</p><br>
+              <p>Prep time: 30 min</p>
+            </div>
+          </button>
+          <button id="button4" class="foodIcon" onclick="window.location.href='LunchNoVeg.html';">
+            <div class="text-overlay">
+              <p>Spiral Potatos</p>
+              <br />
+              <p>Prep time: 20 min</p>
+            </div>
+          </button>
+          <button
+          id="moehren_linsen_suppe"
+          class="foodIcon"
+          onclick="window.location.href='dinnerVeg.html';"
+        >
+          <div class="text-overlay">
+            <p>Carrot Soup</p>
+            <br />
+            <p>Prep time: 20 min</p>
+          </div>
+        </button>
         </div>
       </section>
-
-      <!-- <section class="recipeDisplay">
-        <div class="recipeHeader">
-          <img src="../images/breakfast/chocolate_shell_oats.jpg" alt="Chocolate Shell Oats">
-          <div class="recipeText">
-         <div class="recipeInfo">
-            <h3>Chocolate Shell Oats</h3>
-          <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
-        </div>
-          <p>
-            Ingredients for 2 servings
-            </p>
-            <ul>
-              <li>80 g fine oat flakes</li>
-              <li>2 tbsp linseed</li>
-              <li>300 ml oat drink (oat milk)</li>
-              <li>salt</li>
-              <li>½ tsp turmeric</li>
-              <li>½ tsp cinnamon</li>
-              <li>persimmons</li>
-              <li>100 g carrots</li>
-              <li>20 g hazelnuts</li>
-              <li>2 tbsp coconut oil</li>
-              <li>1 tbsp cocoa powder</li>
-            </ul>
-        </div>
-        </div>
-        <div class="recipeBody">
-          <h4>
-          Preparation steps
-        </h4>
-<ol>
-<li>Mix the oat flakes together with linseed, oat drink and salt, turmeric and cinnamon. Cut the persimmon into small cubes, finely grate the carrot and mix both into the mixture. Then place in the refrigerator for at least 2 hours, preferably overnight.
-</li>
-<li>
-  After the waiting time, divide into two glasses, roughly chop the hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot and let it melt over a low heat for 3-5 minutes and stir with cocoa powder until smooth.
-</li>
-<li>
-  Smooth out the oatmeal and persimmon mixture and pour the coconut oil mixture over it. Swirl the glasses slightly so that a smooth surface forms. As soon as the chocolate layer has set, serve the chocolate shell oats with the remaining hazelnuts.
-</li>
-</ol>
-        </div>
-      </section> -->
     </main>
-
     <footer  class="footer">
       <div class="footer-container">
 
@@ -141,6 +118,5 @@
       </div>
       </div>
     </footer>
-
   </body>
 </html>
