--- a/html/dinnerNoVeg.html
+++ b/html/dinnerNoVeg.html
@@ -51,7 +51,8 @@
     <main>
       <section class="foodDisplayNoVeg">
         <h2>Dinner</h2>
-        <p id="foodDisplayP">Our non Vegan Options</p>
+        <p id="foodDisplayP">Dinner is not just a third daily meal. It's also the last opportunity of the day to give your body the calories and nutrition it needs to thrive before you go to sleep,<br> which for most people, 
+           is the longest stretch in 24 hours they go without food. It's also a nightly occasion to connect with loved ones.</p>
         <div class="foodDisplayIconContainer">
           <button
             id="carpaccio_entenbrust"
@@ -79,7 +80,7 @@
             onclick="showChicken()"
           >
             <div class="text-overlay">
-              <p>Crispy Chicken with Cucumber salad</p>
+              <p>Crispy Chicken </p>
               <br />
               <p>Prep time: 5 min</p>
             </div>
