--- a/html/dinnerVeg.html
+++ b/html/dinnerVeg.html
@@ -50,8 +50,9 @@
 
     <main>
       <section class="foodDisplayVeg">
-        <h2>Dinner</h2>
-        <p id="foodDisplayP">Our Vegan Options</p>
+        <h2>Dinner(vegan)</h2>
+        <p id="foodDisplayP">Dinner is not just a third daily meal. It's also the last opportunity of the day to give your body the calories and nutrition it needs to thrive before you go to sleep,<br> which for most people, 
+          is the longest stretch in 24 hours they go without food. It's also a nightly occasion to connect with loved ones.</p>
         <div class="foodDisplayIconContainer">
           <button
             id="asia_bowl_kraeutersalat"
@@ -83,7 +84,7 @@
             onclick="showEndive()"
           >
             <div class="text-overlay">
-              <p>Endive salad with tofu dressing</p>
+              <p>Endive salad</p>
               <br />
               <p>Prep time: 5 min</p>
             </div>
