added some recipe

--- a/html/breakfastVeg.html
+++ b/html/breakfastVeg.html
@@ -96,24 +96,19 @@
           <img src="../images/breakfast/beeren_icecream_minze.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
-            <h3>Beeren Icecream Minze</h3>
-          <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
+            <h3>Icecream Mint</h3>
+          <p>Delicious Icecream With Mint</p>
         </div>
           <p>
             Ingredients for 2 servings
             </p>
             <ul>
-              <li>80 g fine oat flakes</li>
-              <li>2 tbsp linseed</li>
-              <li>300 ml oat drink (oat milk)</li>
-              <li>salt</li>
-              <li>½ tsp turmeric</li>
-              <li>½ tsp cinnamon</li>
-              <li>persimmons</li>
-              <li>100 g carrots</li>
-              <li>20 g hazelnuts</li>
-              <li>2 tbsp coconut oil</li>
-              <li>1 tbsp cocoa powder</li>
+              <li>120 g Bio Icecream</li>
+              <li>2 tbsp Mint Powder</li>
+              <li>Fresh Mint Leaves</li>
+              <li>Blueberries (as needed)</li>
+              <li>Serving Bowls</li>
+              <li>Mixer</li>
             </ul>
         </div>
         </div>
@@ -122,13 +117,13 @@
           Preparation steps
         </h4>
   <ol>
-  <li>Mix the oat flakes together with linseed, oat drink and salt, turmeric and cinnamon. Cut the persimmon into small cubes, finely grate the carrot and mix both into the mixture. Then place in the refrigerator for at least 2 hours, preferably overnight.
+  <li>Put the Icecream of your favorite flaver into your Mixer, and add the mint powder and as much Blueberries as you simply like and mix them for 2-3 minutes.
   </li>
   <li>
-  After the waiting time, divide into two glasses, roughly chop the hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot and let it melt over a low heat for 3-5 minutes and stir with cocoa powder until smooth.
+  Now put the mixed material to your Serving Bowls
   </li>
   <li>
-  Smooth out the oatmeal and persimmon mixture and pour the coconut oil mixture over it. Swirl the glasses slightly so that a smooth surface forms. As soon as the chocolate layer has set, serve the chocolate shell oats with the remaining hazelnuts.
+  Add some of the fresh Mint leaves and ENJOY.
   </li>
   </ol>
         </div>
@@ -182,24 +177,17 @@
           <img src="../images/breakfast/haferschleim.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
-            <h3>Haferschleim</h3>
-          <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
+            <h3>Oat Porridge</h3>
+          
         </div>
           <p>
             Ingredients for 2 servings
             </p>
             <ul>
-              <li>80 g fine oat flakes</li>
-              <li>2 tbsp linseed</li>
-              <li>300 ml oat drink (oat milk)</li>
-              <li>salt</li>
-              <li>½ tsp turmeric</li>
-              <li>½ tsp cinnamon</li>
-              <li>persimmons</li>
-              <li>100 g carrots</li>
-              <li>20 g hazelnuts</li>
-              <li>2 tbsp coconut oil</li>
-              <li>1 tbsp cocoa powder</li>
+              <li>1 cup rolled oats</li>
+              <li>2 cups milk (dairy or plant-based)</li>
+              <li>Pinch of salt</li>
+          
             </ul>
         </div>
         </div>
@@ -208,13 +196,13 @@
           Preparation steps
         </h4>
   <ol>
-  <li>Mix the oat flakes together with linseed, oat drink and salt, turmeric and cinnamon. Cut the persimmon into small cubes, finely grate the carrot and mix both into the mixture. Then place in the refrigerator for at least 2 hours, preferably overnight.
+  <li>Combine Ingredients: In a saucepan, combine the rolled oats, milk, and a pinch of salt.
   </li>
   <li>
-  After the waiting time, divide into two glasses, roughly chop the hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot and let it melt over a low heat for 3-5 minutes and stir with cocoa powder until smooth.
+    Cook on Stove: Bring the mixture to a simmer over medium heat, stirring constantly.
   </li>
   <li>
-  Smooth out the oatmeal and persimmon mixture and pour the coconut oil mixture over it. Swirl the glasses slightly so that a smooth surface forms. As soon as the chocolate layer has set, serve the chocolate shell oats with the remaining hazelnuts.
+    Serve: Once the oats are soft and the consistency is to your liking, remove from heat and serve warm. You can top it with fruits, nuts, or sweeteners if desired.
   </li>
   </ol>
         </div>
@@ -225,8 +213,8 @@
           <img src="../images/breakfast/hummus_ohne_tahini.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
-            <h3>Hummus Ohne Tahini</h3>
-          <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
+            <h3>Hummus Without Tahini</h3>
+          <p></p>
         </div>
           <p>
             Ingredients for 2 servings
