added content LunchRecipeDisplay and fixed JS for vegLunch

--- a/html/lunchVeg.html
+++ b/html/lunchVeg.html
@@ -50,45 +50,46 @@
 
     <main>
       <section class="foodDisplayVeg">
-        <h2>Lunch</h2>
-        <p id="foodDisplayP">Here you find our vegan options</p>
+        <h2>Lunch (vegan)</h2>
+        <p id="foodDisplayP">Lunch is an important meal for everyone. It provides energy and nutrients to keep the body and brain working efficiently
+           through the afternoon.<br> A packed lunch made at home can be a healthy and delicious choice and gives you control over the foods and ingredients included.</p>
         <div class="foodDisplayIconContainer">
-          <button id="button1Veg" class="foodIconVeg">
+          <button id="buttonVeg1" class="foodIcon foodIconVeg">
             <div class="text-overlay">
               <p>Mint Icecream</p>
               <br />
               <p>Prep time: 15 min</p>
             </div>
           </button>
-          <button id="button2Veg" class="foodIconVeg">
+          <button id="buttonVeg2" class="foodIcon foodIconVeg">
             <div class="text-overlay">
               <p>Chocolate Shell Oats</p>
               <br />
               <p>Prep time: 10 min</p>
             </div>
           </button>
-          <button id="button3Veg" class="foodIconVeg">
+          <button id="buttonVeg3" class="foodIcon foodIconVeg">
             <div class="text-overlay">
               <p>Porridge</p>
               <br />
               <p>Prep time: 5 min</p>
             </div>
           </button>
-          <button id="button4Veg" class="foodIconVeg">
+          <button id="buttonVeg4" class="foodIcon foodIconVeg">
             <div class="text-overlay">
               <p>Hummus without Tahini</p>
               <br />
               <p>Prep time: 20 min</p>
             </div>
           </button>
-          <button id="button5Veg" class="foodIconVeg">
+          <button id="buttonVeg5" class="foodIcon foodIconVeg">
             <div class="text-overlay">
               <p>Crunchy buckwheat granola</p>
               <br />
               <p>Prep time: 7 min</p>
             </div>
           </button>
-          <button id="button6Veg" class="foodIconVeg">
+          <button id="buttonVeg6" class="foodIcon foodIconVeg">
             <div class="text-overlay">
               <p>Oats with Skyr</p>
               <br />
