Ata Final Changes

--- a/html/breakfastVeg.html
+++ b/html/breakfastVeg.html
@@ -54,7 +54,7 @@
         <div class="foodDisplayIconContainer">
           <button id="beeren_icecream_minze" class="foodIcon beeren_icecream_minze" data-target="beeren_icecream_minze_menu">
             <div class="text-overlay">
-              <p>Icecream Minze</p><br>
+              <p>Blueberry Ice Cream</p><br>
               <p>Prep time: 15 min</p>
             </div>
           </button>
@@ -66,25 +66,25 @@
           </button>
           <button id="haferschleim" class="foodIcon haferschleim" data-target="haferschleim_menu">
             <div class="text-overlay">
-              <p>haferschleim</p><br>
+              <p>Oat Porridge</p><br>
               <p>Prep time: 5 min</p>
             </div>
           </button>
           <button id="hummus_ohne_tahini" class="foodIcon hummus_ohne_tahini" data-target="hummus_ohne_tahini_menu">
             <div class="text-overlay">
-              <p>Hummus Ohne Tahini</p><br>
+              <p>Hummus Without Tahini</p><br>
               <p>Prep time: 20 min</p>
             </div>
           </button>
           <button id="knuspriges_buchweizen_granola" class="foodIcon knuspriges_buchweizen_granola" data-target="knuspriges_buchweizen_granola_menu">
             <div class="text-overlay">
-              <p>Knuspriges Buchweizen Granola</p><br>
+              <p>Crunchy Buckwheat Granola</p><br>
               <p>Prep time: 7 min</p>
             </div>
           </button>
           <button id="overnight_oats_mit_skyr" class="foodIcon overnight_oats_mit_skyr" data-target="overnight_oats_mit_skyr_menu">
             <div class="text-overlay">
-              <p>Oats Mit Skyr</p><br>
+              <p>Oats with Skyr</p><br>
               <p>Prep time: 12 hrs</p>
             </div>
           </button>
@@ -96,19 +96,19 @@
           <img src="../images/breakfast/beeren_icecream_minze.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
-            <h3>Icecream Mint</h3>
-          <p>Delicious Icecream With Mint</p>
+            <h3> Blueberry Ice Cream</h3>
+          <p>Blueberry Ice Cream is a luscious and fruity treat that combines the sweetness of blueberries with the creaminess of homemade ice cream. Enjoy the burst of flavor in every spoonful.</p>
         </div>
           <p>
             Ingredients for 2 servings
             </p>
             <ul>
-              <li>120 g Bio Icecream</li>
-              <li>2 tbsp Mint Powder</li>
-              <li>Fresh Mint Leaves</li>
-              <li>Blueberries (as needed)</li>
+              <li>2 cups fresh or frozen blueberries</li>
+              <li>1 cup whole milk</li>
+              <li>2 cups heavy cream</li>
+              <li>3/4 cup granulated sugar</li>
               <li>Serving Bowls</li>
-              <li>Mixer</li>
+              <li>1 teaspoon vanilla extract</li>
             </ul>
         </div>
         </div>
@@ -117,14 +117,15 @@
           Preparation steps
         </h4>
   <ol>
-  <li>Put the Icecream of your favorite flaver into your Mixer, and add the mint powder and as much Blueberries as you simply like and mix them for 2-3 minutes.
+  <li>Blend Blueberries: Puree the blueberries in a blender or food processor until smooth.
   </li>
   <li>
-  Now put the mixed material to your Serving Bowls
+    Combine Ingredients: In a bowl, mix blueberry puree, milk, heavy cream, sugar, and vanilla extract until sugar is dissolved.
   </li>
   <li>
-  Add some of the fresh Mint leaves and ENJOY.
+    Freeze: Pour the chilled mixture into an ice cream maker and churn according to the manufacturer's instructions.
   </li>
+  <li>Feel free to adjust sugar quantities based on your sweetness preference and enjoy these homemade ice creams as refreshing desserts.</li>
   </ol>
         </div>
       </section>
@@ -178,7 +179,7 @@
           <div class="recipeText">
          <div class="recipeInfo">
             <h3>Oat Porridge</h3>
-          
+          <p>a comforting oat porridge that offers a warm and nourishing start to your day. Made with simple ingredients, it's easy to prepare and can be customized with your favorite toppings.</p>
         </div>
           <p>
             Ingredients for 2 servings
@@ -220,17 +221,11 @@
             Ingredients for 2 servings
             </p>
             <ul>
-              <li>80 g fine oat flakes</li>
-              <li>2 tbsp linseed</li>
-              <li>300 ml oat drink (oat milk)</li>
-              <li>salt</li>
-              <li>½ tsp turmeric</li>
-              <li>½ tsp cinnamon</li>
-              <li>persimmons</li>
-              <li>100 g carrots</li>
-              <li>20 g hazelnuts</li>
-              <li>2 tbsp coconut oil</li>
-              <li>1 tbsp cocoa powder</li>
+              <li>1 can (15 oz) chickpeas, drained and rinsed</li>
+              <li>3 tablespoons olive oil</li>
+              <li>2 tablespoons lemon juice</li>
+              <li>1 clove garlic, minced</li>
+              <li>Salt and pepper to taste</li>
             </ul>
         </div>
         </div>
@@ -239,13 +234,13 @@
           Preparation steps
         </h4>
   <ol>
-  <li>Mix the oat flakes together with linseed, oat drink and salt, turmeric and cinnamon. Cut the persimmon into small cubes, finely grate the carrot and mix both into the mixture. Then place in the refrigerator for at least 2 hours, preferably overnight.
+  <li>Blend Ingredients: Combine chickpeas, olive oil, lemon juice, minced garlic, salt, and pepper in a food processor.
   </li>
   <li>
-  After the waiting time, divide into two glasses, roughly chop the hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot and let it melt over a low heat for 3-5 minutes and stir with cocoa powder until smooth.
+    Blend Until Smooth: Process until a smooth paste forms. Adjust consistency with water if needed.
   </li>
   <li>
-  Smooth out the oatmeal and persimmon mixture and pour the coconut oil mixture over it. Swirl the glasses slightly so that a smooth surface forms. As soon as the chocolate layer has set, serve the chocolate shell oats with the remaining hazelnuts.
+    Serve: Drizzle with olive oil and enjoy with pita, veggies, or crackers.
   </li>
   </ol>
         </div>
@@ -256,24 +251,20 @@
           <img src="../images/breakfast/knuspriges_buchweizen_granola.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
-            <h3>Knuspriges Buchweizen Granola</h3>
-          <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
+            <h3>Crunchy Buckwheat Granola</h3>
+          <p>a crunchy and wholesome blend of oats, buckwheat, and nuts. Sweetened with honey or maple syrup, this granola adds a delightful crunch to your breakfast or snacks.</p>
         </div>
           <p>
             Ingredients for 2 servings
             </p>
             <ul>
-              <li>80 g fine oat flakes</li>
-              <li>2 tbsp linseed</li>
-              <li>300 ml oat drink (oat milk)</li>
-              <li>salt</li>
-              <li>½ tsp turmeric</li>
-              <li>½ tsp cinnamon</li>
-              <li>persimmons</li>
-              <li>100 g carrots</li>
-              <li>20 g hazelnuts</li>
-              <li>2 tbsp coconut oil</li>
-              <li>1 tbsp cocoa powder</li>
+              <li>2 cups rolled oats</li>
+              <li>1 cup buckwheat groats</li>
+              <li>1/2 cup nuts (e.g., almonds, walnuts), chopped</li>
+              <li>1/4 cup honey or maple syrup</li>
+              <li>2 tablespoons coconut oil</li>
+              <li>1 teaspoon vanilla extract</li>
+              <li>1 teaspoon vanilla extract</li>
             </ul>
         </div>
         </div>
@@ -282,13 +273,13 @@
           Preparation steps
         </h4>
   <ol>
-  <li>Mix the oat flakes together with linseed, oat drink and salt, turmeric and cinnamon. Cut the persimmon into small cubes, finely grate the carrot and mix both into the mixture. Then place in the refrigerator for at least 2 hours, preferably overnight.
+  <li>Preheat Oven: Heat the oven, mix oats, buckwheat, nuts, honey, melted coconut oil, vanilla, and salt.
   </li>
   <li>
-  After the waiting time, divide into two glasses, roughly chop the hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot and let it melt over a low heat for 3-5 minutes and stir with cocoa powder until smooth.
+    Mix Ingredients: Spread on a baking sheet and bake, stirring for even browning.
   </li>
   <li>
-  Smooth out the oatmeal and persimmon mixture and pour the coconut oil mixture over it. Swirl the glasses slightly so that a smooth surface forms. As soon as the chocolate layer has set, serve the chocolate shell oats with the remaining hazelnuts.
+    Cool and Store: Allow to cool before storing in an airtight container.
   </li>
   </ol>
         </div>
@@ -299,24 +290,17 @@
           <img src="../images/breakfast/overnight_oats_mit_skyr.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
-            <h3>Oats Mit Skyr</h3>
-          <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
+            <h3>Oats with Skyr</h3>
+          <p>Oats with Skyr offers a creamy and protein-packed twist on traditional oatmeal. By combining rolled oats with Icelandic skyr and your favorite fruits, you create a delicious and satisfying breakfast.</p>
         </div>
           <p>
             Ingredients for 2 servings
             </p>
             <ul>
-              <li>80 g fine oat flakes</li>
-              <li>2 tbsp linseed</li>
-              <li>300 ml oat drink (oat milk)</li>
-              <li>salt</li>
-              <li>½ tsp turmeric</li>
-              <li>½ tsp cinnamon</li>
-              <li>persimmons</li>
-              <li>100 g carrots</li>
-              <li>20 g hazelnuts</li>
-              <li>2 tbsp coconut oil</li>
-              <li>1 tbsp cocoa powder</li>
+              <li>1 cup rolled oats</li>
+              <li>1 cup skyr (Icelandic yogurt)</li>
+              <li>1 cup milk (dairy or plant-based)</li>
+              <li>Fresh fruits or berries for topping</li>
             </ul>
         </div>
         </div>
@@ -325,13 +309,13 @@
           Preparation steps
         </h4>
   <ol>
-  <li>Mix the oat flakes together with linseed, oat drink and salt, turmeric and cinnamon. Cut the persimmon into small cubes, finely grate the carrot and mix both into the mixture. Then place in the refrigerator for at least 2 hours, preferably overnight.
+  <li>Combine Oats and Liquid: Mix rolled oats with skyr and milk.
   </li>
   <li>
-  After the waiting time, divide into two glasses, roughly chop the hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot and let it melt over a low heat for 3-5 minutes and stir with cocoa powder until smooth.
+    Soak Overnight: Cover and refrigerate overnight for a creamy texture.
   </li>
   <li>
-  Smooth out the oatmeal and persimmon mixture and pour the coconut oil mixture over it. Swirl the glasses slightly so that a smooth surface forms. As soon as the chocolate layer has set, serve the chocolate shell oats with the remaining hazelnuts.
+    Top and Serve: Before serving, add fresh fruits or berries as toppings. Stir and enjoy!
   </li>
   </ol>
         </div>
