--- a/html/breakfastNoVeg.html
+++ b/html/breakfastNoVeg.html
@@ -95,23 +95,15 @@
         <div class="recipeText">
        <div class="recipeInfo">
           <h3>Skyr Dessert</h3>
-        <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
+        <p>Skyr Dessert is a delightful and healthy treat featuring Icelandic skyr, sweetened with honey and topped with fresh fruits. This easy-to-make dessert is a perfect balance of creaminess and natural sweetness.</p>
       </div>
         <p>
           Ingredients for 2 servings
           </p>
           <ul>
-            <li>80 g fine oat flakes</li>
-            <li>2 tbsp linseed</li>
-            <li>300 ml oat drink (oat milk)</li>
-            <li>salt</li>
-            <li>½ tsp turmeric</li>
-            <li>½ tsp cinnamon</li>
-            <li>persimmons</li>
-            <li>100 g carrots</li>
-            <li>20 g hazelnuts</li>
-            <li>2 tbsp coconut oil</li>
-            <li>1 tbsp cocoa powder</li>
+            <li>1 cup skyr (Icelandic yogurt)</li>
+            <li>2 tablespoons honey</li>
+            <li>Fresh fruits (berries, sliced kiwi, or your choice)</li>
           </ul>
       </div>
       </div>
@@ -120,13 +112,13 @@
         Preparation steps
       </h4>
   <ol>
-  <li>Mix the oat flakes together with linseed, oat drink and salt, turmeric and cinnamon. Cut the persimmon into small cubes, finely grate the carrot and mix both into the mixture. Then place in the refrigerator for at least 2 hours, preferably overnight.
+  <li>Prepare Skyr Base: In a bowl, combine skyr and honey, mixing well.
   </li>
   <li>
-  After the waiting time, divide into two glasses, roughly chop the hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot and let it melt over a low heat for 3-5 minutes and stir with cocoa powder until smooth.
+    Assemble Dessert: Spoon the skyr mixture into serving bowls and top with an assortment of fresh fruits.
   </li>
   <li>
-  Smooth out the oatmeal and persimmon mixture and pour the coconut oil mixture over it. Swirl the glasses slightly so that a smooth surface forms. As soon as the chocolate layer has set, serve the chocolate shell oats with the remaining hazelnuts.
+    Serve: Enjoy this light and satisfying Skyr Dessert as a nutritious treat.
   </li>
   </ol>
       </div>
@@ -138,23 +130,16 @@
           <div class="recipeText">
          <div class="recipeInfo">
             <h3>Blueberry Bowl</h3>
-          <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
+          <p>The Blueberry Bowl is a vibrant and antioxidant-rich breakfast or snack option. Packed with fresh blueberries, yogurt, and granola, it's a wholesome bowl bursting with flavor.</p>
         </div>
           <p>
             Ingredients for 2 servings
             </p>
             <ul>
-              <li>80 g fine oat flakes</li>
-              <li>2 tbsp linseed</li>
-              <li>300 ml oat drink (oat milk)</li>
-              <li>salt</li>
-              <li>½ tsp turmeric</li>
-              <li>½ tsp cinnamon</li>
-              <li>persimmons</li>
-              <li>100 g carrots</li>
-              <li>20 g hazelnuts</li>
-              <li>2 tbsp coconut oil</li>
-              <li>1 tbsp cocoa powder</li>
+              <li>1 cup fresh blueberries</li>
+              <li>1 cup Greek yogurt</li>
+              <li>1/2 cup granola</li>
+              <li>Drizzle of honey (optional)</li>
             </ul>
         </div>
         </div>
@@ -163,14 +148,15 @@
           Preparation steps
         </h4>
   <ol>
-  <li>Mix the oat flakes together with linseed, oat drink and salt, turmeric and cinnamon. Cut the persimmon into small cubes, finely grate the carrot and mix both into the mixture. Then place in the refrigerator for at least 2 hours, preferably overnight.
+  <li>Assemble Base: In a bowl, layer Greek yogurt as the base.
   </li>
   <li>
-  After the waiting time, divide into two glasses, roughly chop the hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot and let it melt over a low heat for 3-5 minutes and stir with cocoa powder until smooth.
+    Add Blueberries: Top with fresh blueberries and sprinkle granola over the yogurt.
   </li>
   <li>
-  Smooth out the oatmeal and persimmon mixture and pour the coconut oil mixture over it. Swirl the glasses slightly so that a smooth surface forms. As soon as the chocolate layer has set, serve the chocolate shell oats with the remaining hazelnuts.
+    Drizzle Honey (Optional): For added sweetness, drizzle honey over the blueberries.
   </li>
+  <li>Enjoy: Dig into this nutritious and delicious Blueberry Bowl for a satisfying meal.</li>
   </ol>
         </div>
       </section>
@@ -181,23 +167,16 @@
           <div class="recipeText">
          <div class="recipeInfo">
             <h3>Sweetpotato Avocado Toast</h3>
-          <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
+          <p>Sweet Potato Avocado Toast is a flavorful twist on the classic. Roasted sweet potato slices provide a nutritious base, topped with creamy avocado for a satisfying and delicious toast.</p>
         </div>
           <p>
             Ingredients for 2 servings
             </p>
             <ul>
-              <li>80 g fine oat flakes</li>
-              <li>2 tbsp linseed</li>
-              <li>300 ml oat drink (oat milk)</li>
-              <li>salt</li>
-              <li>½ tsp turmeric</li>
-              <li>½ tsp cinnamon</li>
-              <li>persimmons</li>
-              <li>100 g carrots</li>
-              <li>20 g hazelnuts</li>
-              <li>2 tbsp coconut oil</li>
-              <li>1 tbsp cocoa powder</li>
+              <li>1 sweet potato, sliced and roasted</li>
+              <li>1 ripe avocado, sliced</li>
+              <li>Salt and pepper to taste</li>
+              <li>Optional toppings: chili flakes, microgreens</li>
             </ul>
         </div>
         </div>
@@ -206,14 +185,15 @@
           Preparation steps
         </h4>
   <ol>
-  <li>Mix the oat flakes together with linseed, oat drink and salt, turmeric and cinnamon. Cut the persimmon into small cubes, finely grate the carrot and mix both into the mixture. Then place in the refrigerator for at least 2 hours, preferably overnight.
+  <li>Roast Sweet Potato: Slice the sweet potato and roast until tender.
   </li>
   <li>
-  After the waiting time, divide into two glasses, roughly chop the hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot and let it melt over a low heat for 3-5 minutes and stir with cocoa powder until smooth.
+    Assemble Toast: Layer avocado slices over the roasted sweet potato. Season with salt and pepper.
   </li>
   <li>
-  Smooth out the oatmeal and persimmon mixture and pour the coconut oil mixture over it. Swirl the glasses slightly so that a smooth surface forms. As soon as the chocolate layer has set, serve the chocolate shell oats with the remaining hazelnuts.
+    Add Toppings (Optional): Sprinkle with chili flakes or top with microgreens for extra flavor.
   </li>
+  <li>Enjoy: Indulge in the delightful combination of Sweet Potato Avocado Toast.</li>
   </ol>
         </div>
       </section>
@@ -223,24 +203,17 @@
           <img src="../images/breakfast/suesskartoffel_toasts_frischkaese_avocado.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
-            <h3>Sweetpotato Freshcheese Toast</h3>
-          <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
+            <h3>Sweetpotato Fresh cheese Toast</h3>
+          <p>Sweet Potato Fresh Cheese Toast combines the sweetness of roasted sweet potato with the creaminess of fresh cheese. This toast is a delightful blend of flavors and textures.</p>
         </div>
           <p>
             Ingredients for 2 servings
             </p>
             <ul>
-              <li>80 g fine oat flakes</li>
-              <li>2 tbsp linseed</li>
-              <li>300 ml oat drink (oat milk)</li>
-              <li>salt</li>
-              <li>½ tsp turmeric</li>
-              <li>½ tsp cinnamon</li>
-              <li>persimmons</li>
-              <li>100 g carrots</li>
-              <li>20 g hazelnuts</li>
-              <li>2 tbsp coconut oil</li>
-              <li>1 tbsp cocoa powder</li>
+              <li>1 sweet potato, sliced and roasted</li>
+              <li>Fresh cheese (such as goat cheese or ricotta)</li>
+              <li>Honey for drizzling</li>
+              <li>Optional: chopped nuts or herbs for garnish</li>
             </ul>
         </div>
         </div>
@@ -249,14 +222,16 @@
           Preparation steps
         </h4>
   <ol>
-  <li>Mix the oat flakes together with linseed, oat drink and salt, turmeric and cinnamon. Cut the persimmon into small cubes, finely grate the carrot and mix both into the mixture. Then place in the refrigerator for at least 2 hours, preferably overnight.
+  <li>Roast Sweet Potato: Slice the sweet potato and roast until tender.
   </li>
   <li>
-  After the waiting time, divide into two glasses, roughly chop the hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot and let it melt over a low heat for 3-5 minutes and stir with cocoa powder until smooth.
+    Spread Fresh Cheese: Spread a layer of fresh cheese over the roasted sweet potato slices.
   </li>
   <li>
-  Smooth out the oatmeal and persimmon mixture and pour the coconut oil mixture over it. Swirl the glasses slightly so that a smooth surface forms. As soon as the chocolate layer has set, serve the chocolate shell oats with the remaining hazelnuts.
+    Drizzle Honey: Drizzle honey over the toast for sweetness.
   </li>
+  <li>Garnish (Optional): Sprinkle with chopped nuts or herbs for added texture and flavor.</li>
+  <li>Enjoy: Savor the unique combination of Sweet Potato Fresh Cheese Toast.</li>
   </ol>
         </div>
       </section>
@@ -267,23 +242,16 @@
           <div class="recipeText">
          <div class="recipeInfo">
             <h3>Avocado Freshcheese Toast</h3>
-          <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
+          <p>Avocado Fresh Cheese Toast is a simple yet satisfying breakfast option. Creamy avocado is paired with fresh cheese on toasted bread for a delicious and nutritious start to your day.</p>
         </div>
           <p>
             Ingredients for 2 servings
             </p>
             <ul>
-              <li>80 g fine oat flakes</li>
-              <li>2 tbsp linseed</li>
-              <li>300 ml oat drink (oat milk)</li>
-              <li>salt</li>
-              <li>½ tsp turmeric</li>
-              <li>½ tsp cinnamon</li>
-              <li>persimmons</li>
-              <li>100 g carrots</li>
-              <li>20 g hazelnuts</li>
-              <li>2 tbsp coconut oil</li>
-              <li>1 tbsp cocoa powder</li>
+              <li>1 ripe avocado, mashed</li>
+              <li>Fresh cheese (such as feta or mozzarella)</li>
+              <li>Salt and pepper to taste</li>
+              <li>Optional: cherry tomatoes, balsamic glaze</li>
             </ul>
         </div>
         </div>
@@ -292,14 +260,15 @@
           Preparation steps
         </h4>
   <ol>
-  <li>Mix the oat flakes together with linseed, oat drink and salt, turmeric and cinnamon. Cut the persimmon into small cubes, finely grate the carrot and mix both into the mixture. Then place in the refrigerator for at least 2 hours, preferably overnight.
+  <li>Prepare Avocado Mash: Mash the ripe avocado and spread it evenly over toasted bread.
   </li>
   <li>
-  After the waiting time, divide into two glasses, roughly chop the hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot and let it melt over a low heat for 3-5 minutes and stir with cocoa powder until smooth.
+    Add Fresh Cheese: Crumble fresh cheese over the avocado layer.
   </li>
   <li>
-  Smooth out the oatmeal and persimmon mixture and pour the coconut oil mixture over it. Swirl the glasses slightly so that a smooth surface forms. As soon as the chocolate layer has set, serve the chocolate shell oats with the remaining hazelnuts.
+    Season and Garnish: Season with salt and pepper, and add cherry tomatoes or drizzle with balsamic glaze if desired.
   </li>
+  <li>Serve: Enjoy the simplicity and deliciousness of Avocado Fresh Cheese Toast.</li>
   </ol>
         </div>
       </section>
@@ -310,23 +279,18 @@
           <div class="recipeText">
          <div class="recipeInfo">
             <h3>Granola</h3>
-          <p>Fruity overnight oats with persimmons and carrots, hidden under a crunchy chocolate layer</p>
+          <p>Granola is a versatile and nutritious breakfast option or snack. This homemade version combines oats, nuts, and sweeteners for a crunchy and flavorful experience.</p>
         </div>
           <p>
             Ingredients for 2 servings
             </p>
             <ul>
-              <li>80 g fine oat flakes</li>
-              <li>2 tbsp linseed</li>
-              <li>300 ml oat drink (oat milk)</li>
-              <li>salt</li>
-              <li>½ tsp turmeric</li>
-              <li>½ tsp cinnamon</li>
-              <li>persimmons</li>
-              <li>100 g carrots</li>
-              <li>20 g hazelnuts</li>
-              <li>2 tbsp coconut oil</li>
-              <li>1 tbsp cocoa powder</li>
+              <li>2 cups rolled oats</li>
+              <li>1/2 cup nuts (e.g., almonds, walnuts), chopped</li>
+              <li>1/4 cup honey or maple syrup</li>
+              <li>2 tablespoons coconut oil</li>
+              <li>1 teaspoon vanilla extract</li>
+              <li>Pinch of salt</li>
             </ul>
         </div>
         </div>
@@ -335,14 +299,15 @@
           Preparation steps
         </h4>
   <ol>
-  <li>Mix the oat flakes together with linseed, oat drink and salt, turmeric and cinnamon. Cut the persimmon into small cubes, finely grate the carrot and mix both into the mixture. Then place in the refrigerator for at least 2 hours, preferably overnight.
+  <li>Preheat Oven: Preheat the oven to 325°F (160°C) and line a baking sheet with parchment paper.
   </li>
   <li>
-  After the waiting time, divide into two glasses, roughly chop the hazelnuts and fold in ⅔ of the kernels. Put coconut oil in a pot and let it melt over a low heat for 3-5 minutes and stir with cocoa powder until smooth.
+    Mix Ingredients: In a large bowl, combine oats, chopped nuts, honey (or maple syrup), melted coconut oil, vanilla extract, and a pinch of salt. Mix well.
   </li>
   <li>
-  Smooth out the oatmeal and persimmon mixture and pour the coconut oil mixture over it. Swirl the glasses slightly so that a smooth surface forms. As soon as the chocolate layer has set, serve the chocolate shell oats with the remaining hazelnuts.
+    Bake and Cool: Spread the mixture on the prepared baking sheet and bake for 20-25 minutes, stirring occasionally for even browning. Allow the granola to cool completely before storing in an airtight container.
   </li>
+  <li>Serve: Enjoy the homemade granola with yogurt, milk, or as a topping for desserts.</li>
   </ol>
         </div>
       </section>
